<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Fun Math</string>
    <string name="input_username" tools:ignore="ExtraTranslation">Please enter your Name </string>
    <string name="action_settings">Settings</string>


    <string name="login">Login</string>
    <string name="remember">Remember Me</string>
    <string name="Gender_M">I\'m a BOY</string>
    <string name="Gender_F">I\'m a GIRL</string>
    <string name="high_score">HS:</string>
    <string name="longest_time">LT：</string>
    <string name="gameMode">Please select PLAY MODE</string>
    <string name="gameMode1">限时模式</string>
    <string name="gameMode2">无尽模式</string>


</resources>
