<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="30dp"
    android:gravity="center"
    >

    <ImageView
        android:id="@+id/Login_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        />
    <EditText
        android:id="@+id/Username_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_username"
        android:singleLine="true"
        />

    <RadioGroup
        android:id="@+id/Gender_RG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

    <RadioButton
        android:id="@+id/Gender_M"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"

        android:text="@string/Gender_M"/>
    <RadioButton
        android:id="@+id/Gender_F"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/Gender_F"/>
</RadioGroup>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/RememberMe_CB"
            android:layout_width="120dp"
            android:layout_height="wrap_content"

            android:hint="@string/remember" />

        <Button
            android:id="@+id/Login_BTN"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:hint="@string/login"
            />
    </RelativeLayout>
</LinearLayout>